--- a/pages/Apple_Pie.html
+++ b/pages/Apple_Pie.html
@@ -7,7 +7,7 @@
       name="description"
       content="recipe from all variety of types and cultures"
     />
-    <title>Classic Apple Pie</title>
+    <title>Classic Pancakes</title>
     <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
     <link
       rel="icon"
@@ -81,59 +81,63 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Classic Apple Pie</h1>
+            <h1>Classic Pancakes</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>45 Minutes</span>
+                  <span>PREP TIME</span><span>10 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>1 Hour</span>
+                  <span>COOK TIME</span><span>15 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Dessert</span>
+                <i class="fa-solid fa-utensils"></i><span>Breakfast</span>
               </div>
             </div>
           </div>
         </section>
         <section class="imageAndNutrition">
-          <img src="../images/food_samples/Apple_Pie.webp" alt="Apple Pie" />
+          <img
+            src="../images/food_samples/Classic_Pancakes.webp"
+            alt="Classic Pancakes"
+          />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">320 kcal</td>
+                <td style="text-align: right">200 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">14 g</td>
+                <td style="text-align: right">6 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">3 g</td>
+                <td style="text-align: right">6 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">48 g</td>
+                <td style="text-align: right">30 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">20 mg</td>
+                <td style="text-align: right">35 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            A timeless American dessert featuring a flaky, buttery crust filled
-            with tender cinnamon-spiced apples. Perfectly balanced between sweet
-            and tart, this pie is a crowd-pleaser for any occasion.
+            Fluffy, golden, and delicious, these classic pancakes are the
+            perfect way to start your day. Serve them with maple syrup, fresh
+            berries, or a dollop of whipped cream for a delightful breakfast
+            treat.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -141,36 +145,31 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 ½ cups
-                (300g) all-purpose flour</label
+                ><input type="checkbox" class="customCheckbox" /> 1 ½ cups
+                (190g) all-purpose flour</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 3 ½ tsp baking
+                powder</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tsp
                 salt</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup (227g)
-                unsalted butter, chilled</label
+                ><input type="checkbox" class="customCheckbox" /> 1 tbsp
+                sugar</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 6-8 Granny
-                Smith apples, peeled and sliced</label
+                ><input type="checkbox" class="customCheckbox" /> 1 ¼ cups
+                (300ml) milk</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> ¾ cup (150g)
-                granulated sugar</label
+                ><input type="checkbox" class="customCheckbox" /> 1 egg</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp lemon
-                juice</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tsp ground
-                cinnamon</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 egg (for egg
-                wash)</label
+                ><input type="checkbox" class="customCheckbox" /> 3 tbsp
+                unsalted butter, melted</label
               ><br />
             </form>
           </div>
@@ -178,80 +177,80 @@
             <h4>You may also Like</h4>
             <div class="separate">
               <div class="recipe">
-                <a href="Chocolate_Cake.html">
+                <a href="French_Toast.html">
                   <img
-                    src="../images/food_samples/Chocolate_Cake.webp"
-                    alt="Chocolate Cake"
+                    src="../images/food_samples/French_Toast.webp"
+                    alt="French Toast"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
+                    <span class="title">French Toast</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Cocoa Powder</span>
+                        <span class="mainIngredient">Bread</span>
+                        <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Milk</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="recipe">
+                <a href="Belgian_Waffles.html">
+                  <img
+                    src="../images/food_samples/Crispy_Belgian_Waffles.webp"
+                    alt="Belgian Waffles"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Belgian Waffles</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
                         <span class="mainIngredient">Flour</span>
                         <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Butter</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
               <div class="recipe">
-                <a href="Cheesecake.html">
+                <a href="Cheese_Omelette.html">
                   <img
-                    src="../images/food_samples/Cheesecake.webp"
-                    alt="Cheesecake"
+                    src="../images/food_samples/Cheese_Veggie_Omelette.webp"
+                    alt="Cheese Omelette"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Cheesecake</span>
+                    <span class="title">Cheese Omelette</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Cream Cheese</span>
-                        <span class="mainIngredient">Graham Crackers</span>
-                        <span class="mainIngredient">Sugar</span>
+                        <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Cheese</span>
+                        <span class="mainIngredient">Vegetables</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
               <div class="recipe">
-                <a href="Peach_Crumble.html">
+                <a href="English_Breakfast.html">
                   <img
-                    src="../images/food_samples/Peach_Crumble.webp"
-                    alt="Peach Crumble"
+                    src="../images/food_samples/Full_English_Breakfast.webp"
+                    alt="English Breakfast"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Peach Crumble</span>
+                    <span class="title">English Breakfast</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Peaches</span>
-                        <span class="mainIngredient">Oats</span>
-                        <span class="mainIngredient">Brown Sugar</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="recipe">
-                <a href="Banana_Bread.html">
-                  <img
-                    src="../images/food_samples/Banana_Bread.webp"
-                    alt="Banana Bread"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Banana Bread</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Bananas</span>
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Walnuts</span>
+                        <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Bacon</span>
+                        <span class="mainIngredient">Sausage</span>
                       </div>
                     </div>
                   </div>
@@ -264,39 +263,29 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Dough</dt>
+              <dt>1. Prepare the Batter</dt>
               <dd>
-                <strong>Step 1:</strong> Cut 1 cup (227g) of chilled butter into
-                small cubes. In a large bowl, whisk together flour and salt. Use
-                a pastry cutter to blend butter into the flour until pea-sized
-                crumbs form.<br /><br />
-                <strong>Step 2:</strong> Gradually add 6-8 tbsp ice water,
-                mixing until dough just comes together. Divide into two disks,
-                wrap in plastic, and refrigerate for 1 hour.
+                In a large bowl, sift together flour, baking powder, salt, and
+                sugar. In a separate bowl, whisk together milk, egg, and melted
+                butter. Pour the wet ingredients into the dry ingredients and
+                mix until just combined. Do not overmix; a few lumps are fine.
               </dd>
-              <dt>2. Make the Filling</dt>
+              <dt>2. Heat the Pan</dt>
               <dd>
-                <strong>Step 1:</strong> Peel and slice apples into ¼-inch thick
-                wedges. Toss with sugar, lemon juice, cinnamon, and 2 tbsp flour
-                in a large bowl. Let sit for 15 minutes.
+                Heat a non-stick skillet or griddle over medium heat. Lightly
+                grease with butter or oil.
               </dd>
-              <dt>3. Assemble the Pie</dt>
+              <dt>3. Cook the Pancakes</dt>
               <dd>
-                <strong>Step 1:</strong> Roll out one dough disk into a 12-inch
-                circle. Line a 9-inch pie dish, trimming excess edges. Add apple
-                filling and dot with 2 tbsp butter.<br /><br />
-                <strong>Step 2:</strong> Roll out the second dough disk and cut
-                into 1-inch strips. Weave strips over the filling in a lattice
-                pattern. Crimp edges with a fork.
+                Pour ¼ cup of batter onto the skillet for each pancake. Cook
+                until bubbles form on the surface and the edges look set, about
+                2-3 minutes. Flip and cook for another 1-2 minutes until golden
+                brown.
               </dd>
-              <dt>4. Bake</dt>
+              <dt>4. Serve</dt>
               <dd>
-                <strong>Step 1:</strong> Preheat oven to 425°F (220°C). Brush
-                lattice with egg wash (1 egg + 1 tbsp water). Sprinkle with
-                coarse sugar.<br /><br />
-                <strong>Step 2:</strong> Bake for 20 minutes, then reduce heat
-                to 375°F (190°C) and bake 40-50 minutes until golden and
-                bubbling. Cool completely before slicing.
+                Serve warm with your favorite toppings, such as maple syrup,
+                fresh berries, or whipped cream.
               </dd>
             </dl>
           </div>
