--- a/pages/Chocolate_Cake.html
+++ b/pages/Chocolate_Cake.html
@@ -39,7 +39,6 @@
           </div>
           <a href="#" class="logo">Recipe<span class="colored">•</span></a>
         </div>
-
         <ul>
           <li>
             <div class="user">
@@ -120,7 +119,7 @@
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">5 g</td>
+                <td style="text-align: right">6 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
@@ -135,10 +134,9 @@
         </section>
         <section class="description">
           <p>
-            This moist and rich chocolate cake is a favorite for any occasion.
-            Its rich flavor comes from cocoa powder and melted chocolate, and
-            the frosting is a smooth, creamy delight. Perfect for celebrations,
-            birthdays, or just satisfying a sweet tooth!
+            A rich and decadent chocolate cake that’s moist, fluffy, and perfect
+            for any celebration. Topped with a silky chocolate ganache, this
+            cake is a chocolate lover’s dream.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -146,54 +144,73 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 cups
+                ><input type="checkbox" class="customCheckbox" /> 2 cups (250g)
                 all-purpose flour</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup
-                unsweetened cocoa powder</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 cups
+                ><input type="checkbox" class="customCheckbox" /> 2 cups (400g)
                 sugar</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 1/2 tsp
-                baking powder</label
+                ><input type="checkbox" class="customCheckbox" /> ¾ cup (90g)
+                cocoa powder</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 1/2 tsp
-                baking soda</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tsp baking
+                powder</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 ½ tsp baking
+                soda</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tsp
                 salt</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 eggs</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup
+                ><input type="checkbox" class="customCheckbox" /> 1 cup (240ml)
                 milk</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 cup
+                ><input type="checkbox" class="customCheckbox" /> ½ cup (120ml)
                 vegetable oil</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 2 eggs</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 2 tsp vanilla
                 extract</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 cup boiling
-                water</label
+                ><input type="checkbox" class="customCheckbox" /> 1 cup (240ml)
+                boiling water</label
               ><br />
             </form>
           </div>
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!-- start -->
+              <div class="recipe">
+                <a href="Cheesecake.html">
+                  <img
+                    src="../images/food_samples/Cheesecake.webp"
+                    alt="Cheesecake"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Cheesecake</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Cream Cheese</span>
+                        <span class="mainIngredient">Graham Crackers</span>
+                        <span class="mainIngredient">Sugar</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
               <div class="recipe">
                 <a href="Apple_Pie.html">
                   <img
@@ -214,66 +231,41 @@
                   </div>
                 </a>
               </div>
-              <!-- next recipe -->
               <div class="recipe">
-                <a href="Spaghetti_Bolognese.html">
+                <a href="Peach_Crumble.html">
                   <img
-                    src="../images/food_samples/Spaghetti_Bolognese.webp"
-                    alt="Spaghetti Bolognese"
+                    src="../images/food_samples/Peach_Crumble.webp"
+                    alt="Peach Crumble"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Spaghetti Bolognese</span>
+                    <span class="title">Peach Crumble</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Ground Beef</span>
-                        <span class="mainIngredient">Tomatoes</span>
-                        <span class="mainIngredient">Pasta</span>
+                        <span class="mainIngredient">Peaches</span>
+                        <span class="mainIngredient">Oats</span>
+                        <span class="mainIngredient">Brown Sugar</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- next recipe -->
               <div class="recipe">
-                <a href="Grilled_Chicken.html">
+                <a href="Banana_Bread.html">
                   <img
-                    src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-                    alt="Grilled Chicken"
+                    src="../images/food_samples/Banana_Bread.webp"
+                    alt="Banana Bread"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title"
-                      >Grilled Chicken with Herb Marinade</span
-                    >
+                    <span class="title">Banana Bread</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Olive Oil</span>
-                        <span class="mainIngredient">Herbs</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
-                <a href="Beef_Stir.html">
-                  <img
-                    src="../images/food_samples/Beef_Stir_Fry.webp"
-                    alt="Beef Stir Fry"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Beef Stir Fry</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Beef</span>
-                        <span class="mainIngredient">Vegetables</span>
-                        <span class="mainIngredient">Soy Sauce</span>
+                        <span class="mainIngredient">Bananas</span>
+                        <span class="mainIngredient">Flour</span>
+                        <span class="mainIngredient">Walnuts</span>
                       </div>
                     </div>
                   </div>
@@ -288,43 +280,36 @@
             <dl>
               <dt>1. Preheat the Oven</dt>
               <dd>
-                Preheat your oven to 350°F (175°C) and grease two 9-inch round
-                cake pans.
+                Preheat your oven to 350°F (175°C). Grease and flour two 9-inch
+                round cake pans.
               </dd>
-
               <dt>2. Mix Dry Ingredients</dt>
               <dd>
-                In a large bowl, sift together the flour, cocoa powder, sugar,
+                In a large bowl, sift together flour, sugar, cocoa powder,
                 baking powder, baking soda, and salt.
               </dd>
-
-              <dt>3. Mix Wet Ingredients</dt>
+              <dt>3. Add Wet Ingredients</dt>
               <dd>
-                In another bowl, whisk together the eggs, milk, oil, and vanilla
-                extract.
+                Add milk, vegetable oil, eggs, and vanilla extract to the dry
+                ingredients. Mix on medium speed until well combined.
               </dd>
-
-              <dt>4. Combine Wet and Dry Ingredients</dt>
+              <dt>4. Add Boiling Water</dt>
               <dd>
-                Add the wet ingredients to the dry ingredients and mix until
-                combined. Gradually add the boiling water and mix well.
+                Gradually add boiling water to the batter, mixing on low speed.
+                The batter will be thin; this is normal.
               </dd>
-
-              <dt>5. Bake the Cake</dt>
+              <dt>5. Bake</dt>
               <dd>
-                Pour the batter into the prepared pans and bake for 30-40
-                minutes, or until a toothpick inserted in the center comes out
+                Pour the batter evenly into the prepared pans. Bake for 30-35
+                minutes, or until a toothpick inserted into the center comes out
                 clean.
               </dd>
-
-              <dt>6. Cool the Cakes</dt>
+              <dt>6. Cool and Frost</dt>
               <dd>
-                Allow the cakes to cool in the pans for 10 minutes, then
-                transfer them to a wire rack to cool completely.
+                Let the cakes cool in the pans for 10 minutes, then transfer to
+                a wire rack to cool completely. Frost with chocolate ganache or
+                your favorite frosting.
               </dd>
-
-              <dt>7. Frost and Serve</dt>
-              <dd>Frost with your favorite chocolate frosting and enjoy!</dd>
             </dl>
           </div>
           <div class="ads">
