--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span class="choice active">All</span>
           <span class="choice">Vegetarian</span>
           <span class="choice">Meat</span>
-          <span class="choice">Dissert</span>
+          <span class="choice">Dessert</span>
           <span class="choice">Lunch</span>
           <span class="choice">Breakfast</span>
         </div>
@@ -90,8 +90,8 @@
       <section class="recipes hidden" id="recipes">
         <h4>Today's Handpicked Delights – Ready to Cook!</h4>
         <div class="recipesList">
-          <!--start-->
-          <div class="recipe">
+          <!-- Chicken Skewers -->
+          <div class="recipe All Meat Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Chicken_Skewers.html">
               <img
@@ -121,10 +121,9 @@
               </div>
             </a>
           </div>
-          <!--end-->
 
-          <!--start-->
-          <div class="recipe">
+          <!-- Spaghetti Bolognese -->
+          <div class="recipe All Meat Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Spaghetti_Bolognese.html">
               <img
@@ -153,10 +152,9 @@
               </div>
             </a>
           </div>
-          <!--end-->
 
-          <!--start-->
-          <div class="recipe">
+          <!-- Grilled Chicken -->
+          <div class="recipe All Meat Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Grilled_Chicken.html">
               <img
@@ -185,10 +183,9 @@
               </div>
             </a>
           </div>
-          <!--end-->
 
-          <!--start-->
-          <div class="recipe">
+          <!-- Beef Stir Fry -->
+          <div class="recipe All Meat Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Beef_Stir.html">
               <img
@@ -217,10 +214,9 @@
               </div>
             </a>
           </div>
-          <!--end-->
 
           <!-- Apple Pie -->
-          <div class="recipe">
+          <div class="recipe All Dessert">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Apple_Pie.html">
               <img
@@ -250,7 +246,7 @@
           </div>
 
           <!-- French Butter Croissant -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Croissant.html">
               <img
@@ -280,7 +276,7 @@
           </div>
 
           <!-- Classic Pancakes -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Classic_Pancakes.html">
               <img
@@ -311,7 +307,7 @@
           </div>
 
           <!-- Vegetable Stir Fry -->
-          <div class="recipe">
+          <div class="recipe All Vegetarian Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Vegetable_Stir.html">
               <img
@@ -342,7 +338,7 @@
           </div>
 
           <!-- Chocolate Cake -->
-          <div class="recipe">
+          <div class="recipe All Dessert">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Chocolate_Cake.html">
               <img
@@ -373,7 +369,7 @@
           </div>
 
           <!-- French Baguette -->
-          <div class="recipe">
+          <div class="recipe All Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Baguette.html">
               <img
@@ -403,7 +399,7 @@
           </div>
 
           <!-- French Toast -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/French_Toast.html">
               <img
@@ -434,7 +430,7 @@
           </div>
 
           <!-- Roasted Vegetables -->
-          <div class="recipe">
+          <div class="recipe All Vegetarian Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Roasted_Vegetables.html">
               <img
@@ -465,7 +461,7 @@
           </div>
 
           <!-- Cheesecake -->
-          <div class="recipe">
+          <div class="recipe All Dessert">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Cheesecake.html">
               <img
@@ -495,7 +491,7 @@
           </div>
 
           <!-- Indian Naan Bread -->
-          <div class="recipe">
+          <div class="recipe All Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Naan_Bread.html">
               <img
@@ -526,7 +522,7 @@
           </div>
 
           <!-- Full English Breakfast -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/English_Breakfast.html">
               <img
@@ -557,7 +553,7 @@
           </div>
 
           <!-- Eggplant Parmesan -->
-          <div class="recipe">
+          <div class="recipe All Vegetarian Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Eggplant_Parmesan.html">
               <img
@@ -588,7 +584,7 @@
           </div>
 
           <!-- Banana Bread -->
-          <div class="recipe">
+          <div class="recipe All Dessert">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Banana_Bread.html">
               <img
@@ -618,7 +614,7 @@
           </div>
 
           <!-- Sourdough Bread -->
-          <div class="recipe">
+          <div class="recipe All Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Sourdough_Bread.html">
               <img
@@ -648,7 +644,7 @@
           </div>
 
           <!-- Cheese Omelette -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Cheese_Omelette.html">
               <img
@@ -679,7 +675,7 @@
           </div>
 
           <!-- Vegetable Curry -->
-          <div class="recipe">
+          <div class="recipe All Vegetarian Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Vegetable_Curry.html">
               <img
@@ -710,7 +706,7 @@
           </div>
 
           <!-- Peach Crumble -->
-          <div class="recipe">
+          <div class="recipe All Dessert">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Peach_Crumble.html">
               <img
@@ -741,7 +737,7 @@
           </div>
 
           <!-- German Pretzel -->
-          <div class="recipe">
+          <div class="recipe All Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/German_Pretzel.html">
               <img
@@ -771,7 +767,7 @@
           </div>
 
           <!-- Belgian Waffles -->
-          <div class="recipe">
+          <div class="recipe All Breakfast">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Belgian_Waffles.html">
               <img
@@ -802,7 +798,7 @@
           </div>
 
           <!-- Grilled Lamb Chops -->
-          <div class="recipe">
+          <div class="recipe All Meat Lunch">
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Lamb_Chops.html">
               <img
@@ -831,7 +827,6 @@
               </div>
             </a>
           </div>
-          <!--end-->
         </div>
       </section>
     </main>
