--- a/pages/Lamb_Chops.html
+++ b/pages/Lamb_Chops.html
@@ -39,6 +39,7 @@
           </div>
           <a href="#" class="logo">Recipe<span class="colored">•</span></a>
         </div>
+
         <ul>
           <li>
             <div class="user">
@@ -59,24 +60,22 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-          >
-            <i class="bx bxl-facebook"></i>
-          </a>
+            ><i class="bx bxl-facebook"></i
+          ></a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-          >
-            <i class="bx bxl-linkedin"></i>
-          </a>
+            ><i class="bx bxl-linkedin"></i
+          ></a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-          >
-            <i class="bx bxl-instagram"></i>
-          </a>
+            ><i class="bx bxl-instagram"></i
+          ></a>
         </div>
       </nav>
     </header>
+
     <main>
       <section class="wrapper hidden">
         <section class="recipeHeader">
@@ -86,21 +85,22 @@
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>30 Minutes</span>
+                  <span>PREP TIME</span><span>10 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>20 Minutes</span>
+                  <span>COOK TIME</span><span>15 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Grilled</span>
+                <i class="fa-solid fa-utensils"></i><span>Main Course</span>
               </div>
             </div>
           </div>
         </section>
+
         <section class="imageAndNutrition">
           <img
             src="../images/food_samples/Grilled_Lamb_Chops.webp"
@@ -111,19 +111,19 @@
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">250 kcal</td>
+                <td style="text-align: right">300 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">15 g</td>
+                <td style="text-align: right">20 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">25 g</td>
+                <td style="text-align: right">28 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">5 g</td>
+                <td style="text-align: right">2 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
@@ -132,13 +132,16 @@
             </table>
           </div>
         </section>
+
         <section class="description">
           <p>
-            Succulent lamb chops marinated in a zesty mixture of garlic, herbs,
-            and olive oil, then grilled to perfection for a smoky and tender
-            flavor. The perfect dish for any special occasion or BBQ gathering.
+            Grilled lamb chops are a savory and tender main course perfect for a
+            special dinner or family gathering. This easy recipe will guide you
+            through the steps of marinating and grilling lamb chops to achieve a
+            juicy, flavorful result.
           </p>
         </section>
+
         <section class="ingredientAndRecommendations">
           <div class="ingredients">
             <h2>Ingredients</h2>
@@ -148,80 +151,100 @@
                 chops</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 3 tbsp olive
-                oil</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tablespoons
+                olive oil</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 garlic
-                cloves, minced</label
+                ><input type="checkbox" class="customCheckbox" /> 2 cloves
+                garlic, minced</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp fresh
-                rosemary, chopped</label
+                ><input type="checkbox" class="customCheckbox" /> 1 tablespoon
+                fresh rosemary, chopped</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp fresh
-                thyme, chopped</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp
+                ><input type="checkbox" class="customCheckbox" /> 1 teaspoon
                 salt</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp black
-                pepper</label
+                ><input type="checkbox" class="customCheckbox" /> 1/2 teaspoon
+                black pepper</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 lemon,
-                juiced</label
+                ><input type="checkbox" class="customCheckbox" /> 1 teaspoon
+                lemon zest</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 tablespoon
+                fresh lemon juice</label
               ><br />
             </form>
           </div>
+
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
+              <!-- start -->
               <div class="recipe">
-                <a href="Grilled_Chicken_with_Herb_Marinade.html">
+                <a href="Beef_Stir.html">
                   <img
-                    src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
-                    alt="Grilled Chicken"
+                    src="../images/food_samples/Beef_Stir_Fry.webp"
+                    alt="Beef Stir Fry"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title"
-                      >Grilled Chicken with Herb Marinade</span
-                    >
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Rosemary</span>
-                        <span class="mainIngredient">Garlic</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="recipe">
-                <a href="Steak_Bites.html">
-                  <img
-                    src="../images/food_samples/Steak_Bites.webp"
-                    alt="Steak Bites"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Steak Bites</span>
+                    <span class="title">Beef Stir Fry</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Beef</span>
-                        <span class="mainIngredient">Garlic</span>
-                        <span class="mainIngredient">Olive Oil</span>
+                        <span class="mainIngredient">Vegetables</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Chicken_Skewers.html">
+                  <img
+                    src="../images/food_samples/Chicken_Skewers.webp"
+                    alt="Chicken Skewers"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Chicken Skewers</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Chicken</span>
+                        <span class="mainIngredient">Vegetables</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Spaghetti_Bolognese.html">
+                  <img
+                    src="../images/food_samples/Spaghetti_Bolognese.webp"
+                    alt="Spaghetti Bolognese"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Spaghetti Bolognese</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Pasta</span>
+                        <span class="mainIngredient">Ground Beef</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- next recipe -->
               <div class="recipe">
                 <a href="Roasted_Vegetables.html">
                   <img
@@ -234,29 +257,8 @@
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Zucchini</span>
                         <span class="mainIngredient">Carrots</span>
-                        <span class="mainIngredient">Olive Oil</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="recipe">
-                <a href="Grilled_Vegetables.html">
-                  <img
-                    src="../images/food_samples/Grilled_Vegetables.webp"
-                    alt="Grilled Vegetables"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Grilled Vegetables</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Bell Peppers</span>
-                        <span class="mainIngredient">Zucchini</span>
-                        <span class="mainIngredient">Olive Oil</span>
+                        <span class="mainIngredient">Potatoes</span>
                       </div>
                     </div>
                   </div>
@@ -265,36 +267,42 @@
             </div>
           </div>
         </section>
+
         <section class="instructionsAndAds">
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
               <dt>1. Prepare the Marinade</dt>
               <dd>
-                In a bowl, combine olive oil, minced garlic, rosemary, thyme,
-                salt, pepper, and lemon juice. Whisk until well blended.
+                In a small bowl, whisk together the olive oil, garlic, rosemary,
+                salt, pepper, lemon zest, and lemon juice.
               </dd>
+
               <dt>2. Marinate the Lamb Chops</dt>
               <dd>
-                Place lamb chops in a resealable bag or shallow dish. Pour the
-                marinade over the lamb, ensuring it’s fully coated. Refrigerate
-                for at least 1 hour, or overnight for best results.
+                Place the lamb chops in a shallow dish or resealable bag and
+                pour the marinade over the chops. Let them marinate for at least
+                30 minutes (or overnight for more flavor).
               </dd>
+
               <dt>3. Preheat the Grill</dt>
               <dd>
-                Preheat your grill to medium-high heat (about 400°F or 200°C).
-                Lightly oil the grates to prevent sticking.
+                Preheat your grill to medium-high heat. Make sure the grates are
+                clean and lightly oiled to prevent sticking.
               </dd>
+
               <dt>4. Grill the Lamb Chops</dt>
               <dd>
-                Remove lamb chops from the marinade, shaking off excess. Place
-                on the grill and cook for 4-5 minutes per side for medium-rare
-                or longer for your desired doneness.
+                Place the lamb chops on the grill and cook for 4-5 minutes per
+                side, or until the internal temperature reaches 145°F (63°C) for
+                medium-rare or 160°F (71°C) for medium.
               </dd>
+
               <dt>5. Rest and Serve</dt>
               <dd>
-                Let the lamb chops rest for 5 minutes before serving. Serve with
-                a side of roasted vegetables or a fresh salad.
+                Remove the lamb chops from the grill and let them rest for 5
+                minutes before serving. Serve with your favorite sides and
+                enjoy!
               </dd>
             </dl>
           </div>
